[tool.poetry]
name = "queueing"
version = "0.1.0"
description = "Basic functions and objects of queueing theory"
authors = ["Ruslan Fakhrutdinov <farus95@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
